force-app/main/default/objects/Integration_Out__c/Integration_Out__c.object-meta.xml
<CustomObject>
    <description>integration_out</description>
    <label>Integration Out</label>
    <nameField>
        <label>Integration Out Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Outs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>