force-app/main/default/objects/Integration_Out__c/fields/Date_Modified__c.field-meta.xml
<CustomField>
    <fullName>Date_Modified__c</fullName>
    <description>date of insert update delete (pull this from the date modified on the record ideally)</description>
    <label>Date Modified</label>
    <type>DateTime</type>
</CustomField>