force-app/main/default/objects/Integration_Out__c/fields/error_message__c.field-meta.xml
<CustomField>
    <fullName>error_message__c</fullName>
    <label>error message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>