force-app/main/default/objects/Integration_Out__c/fields/integration_record_id__c.field-meta.xml
<CustomField>
    <fullName>integration_record_id__c</fullName>
    <description>Used as a unique id for data integration. This field will be used as the unique id when talking with another system. As we connect multiple systems, this number will connect everything for this record. Using this instead of Salesforce&apos;s record id (as seen in the url) because that value changes when moving Salesforce instances or making a partial Salesforce copy. When migrating data to another system, this record should follow to the new system and continue to increment in the new system. By doing this, we can migrate data to a new system, but keep integrations intact.</description>
    <label>integration record id</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>