force-app/main/default/objects/Integration_Out__c/fields/json_message_2__c.field-meta.xml
<CustomField>
    <fullName>json_message_2__c</fullName>
    <label>json message 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>