force-app/main/default/objects/Integration_Out__c/fields/Last_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed_Date__c</fullName>
    <description>date+time this row was processed, set this even if an error occurs, update it every time it was attempted to be processed again</description>
    <label>Last Processed Date</label>
    <type>DateTime</type>
</CustomField>