force-app/main/default/objects/Integration_Out__c/fields/long_data_ind__c.field-meta.xml
<CustomField>
    <fullName>long_data_ind__c</fullName>
    <defaultValue>false</defaultValue>
    <description>designates that the record&apos;s data does not fit into one JSON</description>
    <label>long data ind</label>
    <type>Checkbox</type>
</CustomField>