force-app/main/default/objects/Integration_Out__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>place to put an error message</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>