force-app/main/default/objects/Integration_Out__c/fields/Modified_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Modified_Record_Id__c</fullName>
    <label>Modified Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>