force-app/main/default/objects/Integration_Out__c/fields/Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Api_Name__c</fullName>
    <description>api name of salesforce object that was inserted/updated/deleted</description>
    <label>Object Api Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>