force-app/main/default/objects/Integration_Out__c/fields/Outbound_Id__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Id__c</fullName>
    <description>incrementing autonumber integer</description>
    <label>Outbound Id</label>
    <type>AutoNumber</type>
</CustomField>