force-app/main/default/objects/Integration_Out__c/fields/Processed_Count__c.field-meta.xml
<CustomField>
    <fullName>Processed_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>default to 0 on insert, increment every time this record was attempted to be processed on error or success</description>
    <label>Processed Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>