force-app/main/default/objects/Integration_Out__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>(N,E,P,X) for New/Error/successfully Processed/Ignore</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>X</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Ready</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>