force-app/main/default/objects/Integration_Out__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Event_Type__c</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>4/29/2024 12:00 AM</value>
    </filters>
    <label>All Records</label>
</ListView>